# genai_logistic-intelligent-hub

./: .env.example  .gitignore  CHANGELOG.md  DEMO_SCRIPT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  LINEAGE_EXECUTIVE_PRESENTATION.md  LINEAGE_PILOT_PROPOSAL.md  LINEAGE_SOLUTION_OVERVIEW.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SETUP_GUIDE.md  MCP_UI_FEATURES.md  MCP_UI_GUIDE.md  MULTI_VECTOR_DATABASE_GUIDE.md  Makefile  NGROK_SETUP_GUIDE.md  PRODUCTION_GUIDE.md  PROJECT_REVIEW_SUMMARY.md  QUERY_TAB_UPDATE_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_IMPROVEMENTS.md  README.md  README_LINEAGE.md  SECURITY_GUIDE.md  SETUP_NGROK_AUTH.md  UI_FEATURES_GUIDE.md  cleanup_ngrok.ps1  delete_collection.py  docker-compose.yml  environment.yml  fix_chromadb.py  force_reset_chromadb.py  preflight.ps1  preflight.sh  requirements.txt  reset_chromadb.py  test_all_agents.py  test_lineage_agent.py  (+1 more)
.github/workflows/: ci.yml  deploy.yml
.ipynb_checkpoints/: README_LINEAGE-checkpoint.md  lineage-sops-checkpoint.txt  preflight-checkpoint.sh
.superpowers/brainstorm/4154-1774364053/: .server-stopped  arch-approaches.html  auth-approach.html  dashboard-style.html  demo-real-switch.html  design-section-1-v2.html  design-section-1.html  design-section-2.html  design-section-3.html  design-section-4.html  frontend-mockup.html  iot-protocol.html
config/: glih.toml
deploy/aws/: main.tf  variables.tf
deploy/azure/: main.tf
deploy/gcp/: main.tf
deploy/k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml
docs/superpowers/plans/: 2026-03-29-mcp-connectors-review.md  (+1 more)
documents/GLIH/: generate_pitch_pdf.py
glih-agents/: pyproject.toml
glih-agents/src/glih_agents/: __init__.py  anomaly_responder.py  customer_notifier.py  ops_summarizer.py  route_advisor.py
glih-agents/src/glih_agents/tools/: shipment_api.py
glih-backend/: Dockerfile  gunicorn.conf.py  pyproject.toml
glih-backend/src/glih_backend/: __main__.py  config.py  dispatchers.py  history_store.py  mcp_client.py  mcp_server.py  providers.py  utils.py  vector_store_unified.py
glih-backend/src/glih_backend/api/: auth_utils.py  main.py  permissions.py
glih-backend/src/glih_backend/mcp/: __init__.py  client.py  schemas.py
glih-backend/src/glih_backend/vector_stores/: __init__.py  base.py  chromadb_store.py  factory.py  faiss_store.py  pinecone_store.py  qdrant_store.py  weaviate_store.py
glih-eval/: pyproject.toml
glih-eval/src/glih_eval/: metrics.py
glih-frontend/: pyproject.toml
glih-frontend-next/: Dockerfile  middleware.ts  package-lock.json  package.json
glih-frontend-next/app/: globals.css  layout.tsx
glih-frontend-next/components/: Header.tsx  Sidebar.tsx
glih-frontend-next/hooks/: usePermissions.ts
glih-frontend-next/lib/: api.ts
glih-frontend/src/glih_frontend/: app.py
glih-ingestion/: pyproject.toml
glih-ingestion/src/glih_ingestion/: io.py
mcp-servers/: README.md  docs_server.py  iot_server.py  requirements.txt  start_all.ps1  start_all.sh  wms_server.py
scripts/: demo-recording.ps1  dev.ps1  dev.sh
tests/: load_test.py
(+15 files in other folders)
