[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glih-agents"
version = "0.1.0"
description = "GLIH agentic layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lanre" }]
license = { text = "Proprietary" }
dependencies = [
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
huggingface = ["transformers>=4.44.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["glih_agents*"]
